[package]
authors = ["Md. Sulaiman <dev.sulaiman@icloud.com>"]
categories = ["algorithms"]
description = "SPIR-V compiler for DeepCL"
edition.workspace = true
keywords = ["gpu", "compiler"]
license.workspace = true
name = "deepcl-spirv"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcl-spirv"
version.workspace = true

[features]
default = [
  "std",
  "deepcl-common/default",
  "deepcl-core/default",
  "deepcl-runtime/default",
]
std = ["deepcl-common/std", "deepcl-core/std", "deepcl-runtime/std"]

[dependencies]
bitflags = { workspace = true }
deepcl-common = { path = "../deepcl-common", version = "0.7.0", default-features = false }
deepcl-core = { path = "../deepcl-core", version = "0.7.0" }
deepcl-runtime = { path = "../deepcl-runtime", version = "0.7.0", default-features = false, features = [
  "channel-mutex",
] }
half = { workspace = true }

hashbrown = { workspace = true }

rspirv = { workspace = true }

# Optimizer
deepcl-opt = { path = "../deepcl-opt", version = "0.7.0" }

[dev-dependencies]
deepcl-random = { path = "../deepcl-random", version = "0.7.0", features = [
  "export_tests",
] }
