[package]
authors = [
    "Md. Sulaiman <dev.sulaiman@icloud.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "DeepCL Standard Library."
edition.workspace = true
keywords = []
license.workspace = true
name = "deepcl-std"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcl-std"
version.workspace = true

[features]
export_tests = []

[dependencies]

deepcl-core = { path = "../deepcl-core", default-features = false }
deepcl-runtime = { path = "../deepcl-runtime", default-features = false }
half.workspace = true
paste = { workspace = true }
serde = { workspace = true }
variadics_please = { workspace = true }

# no_std compat
foldhash = { workspace = true }
spin = { workspace = true }
