[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "Multi-platform high-performance compute language extension for Rust."
edition.workspace = true
keywords = ["gpu", "cuda", "wgpu", "gpgpu", "tensor"]
license.workspace = true
name = "deepcl"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode"
version.workspace = true

[features]
autotune-checks = ["deepcl-runtime/autotune-checks"]
convolution = ["dep:deepcl-convolution"]
default = [
    "std",
    "stdlib",
    "matmul",
    "convolution",
    "deepcl-core/default",
    "deepcl-cuda?/default",
    "deepcl-cpu?/default",
    "deepcl-hip?/default",
    "deepcl-wgpu?/default",
]
exclusive-memory-only = ["deepcl-wgpu?/exclusive-memory-only"]
matmul = ["dep:deepcl-matmul"]
random = ["dep:deepcl-random"]
reduce = ["dep:deepcl-reduce"]
std = ["deepcl-core/std", "deepcl-wgpu?/std", "deepcl-cuda?/std"]
stdlib = ["deepcl-std"] # DeepCL standard library
template = ["deepcl-core/template"]

profile-tracy = ["deepcl-runtime/profile-tracy", "deepcl-wgpu?/profile-tracy"]


# Runtimes
cpu = ["deepcl-cpu"]
cuda = ["deepcl-cuda"]
cuda-ptx-wmma = ["deepcl-cuda?/ptx-wmma"]
hip = ["deepcl-hip"]
hip-rocwmma = ["deepcl-hip?/rocwmma"]
wgpu = ["deepcl-wgpu"]
wgpu-msl = ["wgpu", "deepcl-wgpu/msl"]
wgpu-spirv = ["wgpu", "deepcl-wgpu/spirv"]
spirv-dump = ["deepcl-wgpu/spirv-dump"]

[dependencies]
deepcl-convolution = { path = "../deepcl-convolution", version = "0.1.0", default-features = false, optional = true }
deepcl-core = { path = "../deepcl-core", version = "0.1.0", default-features = false }
deepcl-cpu = { path = "../deepcl-cpu", version = "0.1.0", default-features = false, optional = true }
deepcl-cuda = { path = "../deepcl-cuda", version = "0.1.0", default-features = false, optional = true }
deepcl-hip = { path = "../deepcl-hip", version = "0.1.0", default-features = false, optional = true }
deepcl-matmul = { path = "../deepcl-matmul", version = "0.1.0", default-features = false, optional = true }
deepcl-random = { path = "../deepcl-random", version = "0.1.0", default-features = false, optional = true }
deepcl-reduce = { path = "../deepcl-reduce", version = "0.1.0", default-features = false, optional = true }
deepcl-runtime = { path = "../deepcl-runtime", version = "0.1.0", default-features = false }
deepcl-std = { path = "../deepcl-std", version = "0.1.0", optional = true }
deepcl-wgpu = { path = "../deepcl-wgpu", version = "0.1.0", default-features = false, optional = true }
half = { workspace = true }

[[bench]]
harness = false
name = "matmul"
required-features = ["random"]

[[bench]]
harness = false
name = "conv2d"
required-features = ["random"]

[[bench]]
harness = false
name = "memcpy_async"
required-features = ["random"]

[[bench]]
harness = false
name = "unary"
required-features = ["random"]
