[package]
authors = ["Md. Sulaiman <dev.sulaiman@icloud.com>"]
categories = ["science"]
description = "Automatic differentiation backend for the Deepcode framework"
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "data"]
license.workspace = true
name = "deepcode-autodiff"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcode-autodiff"
documentation = "https://docs.rs/deepcode-autodiff"
version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
export_tests = ["deepcode-tensor-testgen"]
std = []

[dependencies]
deepcode-common = { path = "../deepcode-common", version = "0.1.0", default-features = false }
deepcode-tensor = { path = "../deepcode-tensor", version = "0.1.0", default-features = false }
deepcode-tensor-testgen = { path = "../deepcode-tensor-testgen", version = "0.1.0", optional = true }

derive-new = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }
num-traits = { workspace = true }
portable-atomic = { workspace = true }

[dev-dependencies]
deepcode-tensor = { path = "../deepcode-tensor", version = "0.1.0", default-features = false, features = [
    "export_tests",
] }

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]
