[package]
authors = ["Md. Sulaiman <dev.sulaiman@icloud.com>"]
description = "Abstractions for network communication for Deepcode"
edition.workspace = true
license.workspace = true
name = "deepcode-communication"
readme.workspace = true
repository = "https://github.com/kothagpt/deepcode/tree/main/crates/deepcode-communication"
version.workspace = true

[lints]
workspace = true

[features]
data-service = ["deepcode-tensor"]
websocket = ["axum", "tokio-tungstenite", "futures"]

[dependencies]
deepcode-common = { path = "../deepcode-common", version = "0.1.0", default-features = true }
bytes = { workspace = true }
derive-new = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "signal"] }
tokio-util = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }

# Tensor Data Service
deepcode-tensor = { path = "../deepcode-tensor", version = "0.1.0", optional = true }

# Websocket
axum = { workspace = true, features = ["ws"], optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

